feature: finish logout function
